--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Contact Book"
-      content="this application stores list of phone contacts"
+      content="This application stores list of phone contacts, tab and desktop version"
     />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
